# web-agent

./: .gitignore  README.md  pyproject.toml
src/scraper/: app.py  scrapfly_util.py
src/scraper/pages/: 01_scrape_data.py  02_text.py  03_markdown.py  04_html.py  05_screenshot.py  html.py  markdown.py  text.py
